# cloud_api

./: .pre-commit-config.yaml  Cloud API.postman_collection.json  Dockerfile  README.md  docker-compose.yml  example.env  manage.py  pyproject.toml  requirements  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_access_author_alter_file_file_id.py  0002_alter_file_file_id.py
api/serializers/: file_serializers.py  user_serializers.py
api/views/: file_views.py  user_views.py
cloud_api/: asgi.py  password_validators.py  permissions.py  settings.py  urls.py  wsgi.py
cloud_api/generics/: common.py  exceptions.py  handlers.py  managers.py  password_validators.py  permissions.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_first_name_and_more.py
