[tool.poetry]
name = "cloud-api"
version = "0.1.0"
description = ""
authors = ["Zakhy <lirchzakhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pillow = "^10.2.0"
mysqlclient = "^2.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"


[tool.poetry.dev-dependencies]
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
